--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                 </div>
             </div>
             <div class="contacts-sections">
-                <div id="contacts-section-1" class="contacts-sections__section">
+                <span id="contacts-section-1"></span>
+                <div class="contacts-sections__section">
                     <div class="contacts-sections__section-content-wrp">
                         <p class="contacts-sections__section-header">{{__('contact.sharedRoom')}}</p>
                     </div>
@@ -103,7 +104,8 @@
                     </div>
                     </div>
                 </div>
-                <div id="contacts-section-2" class="contacts-sections__section">
+                <span id="contacts-section-2"></span>
+                <div class="contacts-sections__section">
                     <div class="contacts-sections__section-content-wrp">
                         <p class="contacts-sections__section-header">{{__('contact.callCentre')}}</p>
                     </div>
@@ -499,7 +501,8 @@
                         </div>
                     </div>
                 </div>
-                <div id="contacts-section-3" class="contacts-sections__section">
+                <span id="contacts-section-3"></span>
+                <div  class="contacts-sections__section">
                     <div class="contacts-sections__section-content-wrp">
                         <p class="contacts-sections__section-header">{{__('contact.navShops')}}</p>
                     </div>
@@ -551,7 +554,8 @@
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d343.88882708408215!2d30.710111198252406!3d46.40686231749278!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c633b0678e4b13%3A0x8c6f39b843a3b43a!2sLogicPower!5e0!3m2!1sru!2sua!4v1632305240162!5m2!1sru!2sua" width="1133" height="503" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                     </div>
                 </div>
-                <div id="contacts-section-4" class="contacts-sections__section">
+                <span id="contacts-section-4"></span>
+                <div class="contacts-sections__section">
                     <div class="contacts-sections__section-content-wrp">
                         <p class="contacts-sections__section-header">{{__('contact.navSupport')}}</p>
                     </div>
@@ -607,7 +611,8 @@
                         </button>
                     </div>
                 </div>
-                <div id="contacts-section-5" class="contacts-sections__section">
+                <span id="contacts-section-5"></span>
+                <div class="contacts-sections__section">
                     <div class="contacts-sections__section-content-wrp">
                         <p class="contacts-sections__section-header">{{__('contact.navAccounting')}}</p>
                     </div>
@@ -652,12 +657,12 @@
             })
         });
         const headerBr = document.querySelector('header');
-        let heightHeader = headerBr.clientHeight;
         let navWrp = document.querySelector('[data-nav-wrp]');
         window.addEventListener('resize', changeNavigationHeight);
         function changeNavigationHeight() {
-            window.getComputedStyle(navWrp).getPropertyValue('--heightHeader');
-            navWrp.style.setProperty('--heightHeader', heightHeader + 'px');
+            let heightHeader = headerBr.clientHeight;
+            window.getComputedStyle(navWrp).getPropertyValue('--heightHeaderCont');
+            navWrp.style.setProperty('--heightHeaderCont', (heightHeader + 'px'));
         }
         changeNavigationHeight();
     </script>
